# iTriangle

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: tests.yml
editor/: Cargo.toml
editor/aaa/: triangle_test_72.json  triangle_test_73.json
editor/src/: lib.rs  main.rs  web.rs
editor/src/app/: design.rs  main.rs  mod.rs
editor/src/app/triangle/: content.rs  control.rs  workspace.rs
editor/src/compat/: convert.rs  mod.rs  point.rs
editor/src/data/: mod.rs  resource.rs  triangle.rs
editor/src/draw/: path.rs
editor/src/geom/: camera.rs  vector.rs
editor/src/mesh/: mod.rs  path_builder.rs
editor/src/mesh_viewer/: color.rs  mod.rs  widget.rs
editor/src/path_editor/: color.rs  mod.rs  state.rs  widget.rs
editor/src/sheet/: widget.rs
editor/tests/triangle/: test_0.json  test_1.json  test_10.json  test_11.json  test_12.json  test_13.json  test_14.json  test_15.json  test_16.json  test_17.json  test_18.json  test_19.json  test_2.json  test_20.json  test_21.json  test_22.json  test_23.json  test_24.json  test_25.json  test_26.json  test_27.json  test_28.json  test_29.json  test_3.json  test_30.json  test_31.json  test_33.json  test_34.json  test_35.json  test_36.json  test_37.json  test_38.json  test_39.json  test_4.json  test_40.json  test_41.json  test_42.json  test_43.json  test_44.json  test_47.json  (+30 more)
iTriangle/: Cargo.toml  README.md
iTriangle/src/: index.rs  lib.rs  location.rs
iTriangle/src/advanced/: bitset.rs  buffer.rs  centroid.rs  convex.rs  delaunay.rs  mod.rs  triangulation.rs
iTriangle/src/delaunay/: convex.rs  delaunay.rs
iTriangle/src/fit/: delaunay.rs  mod.rs  triangulation.rs
iTriangle/src/float/: builder.rs  centroid_net.rs  circumcenter.rs  convex.rs  custom.rs  delaunay.rs  locator.rs  mod.rs  triangulatable.rs  triangulation.rs  triangulator.rs  unchecked.rs
iTriangle/src/geom/: mod.rs  point.rs  triangle.rs
iTriangle/src/int/: binder.rs  builder.rs  chain_builder.rs  chain_builder_bin.rs  chain_builder_direct.rs  chain_vertex.rs  custom.rs  locator.rs  mesh_builder.rs  meta.rs  mod.rs  section.rs  solver.rs  triangulatable.rs  triangulation.rs  triangulator.rs  unchecked.rs  v_segment.rs  validation.rs  vertex.rs
iTriangle/src/int/earcut/: earcut_64.rs  flat.rs  heap.rs  mod.rs  net.rs  util.rs
iTriangle/src/int/monotone/: builder.rs  chain_builder.rs  chain_builder_bin.rs  chain_builder_direct.rs  chain_vertex.rs  mesh_builder.rs  mod.rs  phantom.rs  section.rs  triangulator.rs  v_segment.rs
iTriangle/src/int/monotone/chain/: builder.rs  mod.rs  vertex.rs
iTriangle/src/int/monotone/flat/: mod.rs  section.rs  triangulator.rs
iTriangle/src/int/monotone/net/: mod.rs  phantom.rs  section.rs  triangulator.rs
iTriangle/src/monotone/: mnav_node.rs  monotone_layout.rs  mslice_buffer.rs  node_layout.rs
iTriangle/src/plain/: builder.rs  mod.rs  net.rs  section.rs  triangle.rs  triangulator.rs  v_segment.rs  vertex.rs
iTriangle/src/raw/: binder.rs  builder.rs  mod.rs  section.rs  triangle.rs  triangulatable.rs  triangulation.rs  triangulator.rs  v_segment.rs  vertex.rs
iTriangle/src/stroke/: mod.rs
iTriangle/src/tesselator/: mod.rs  seeder.rs  solver.rs  split.rs  tessellation.rs
iTriangle/src/tessellation/: circumcenter.rs  convert.rs  mod.rs  seeder.rs  split.rs  tessellatable.rs
iTriangle/src/triangulation/: float.rs  int.rs
iTriangle/tests/: doc_tests.rs  float_tests.rs  non_zero_tests.rs  triangulation_tests.rs
iTriangle/tests/data/: triangle_test_74.json
performance/cpp_app/: CMakeLists.txt  build.sh  readme.txt
performance/cpp_app/lib/: earcut.hpp  triangle.h
performance/cpp_app/src/: main.cpp
performance/cpp_app/src/test/: test_0_star.cpp  test_0_star.h  test_1_star_with_hole.cpp  test_1_star_with_hole.h  test_2_rect_star_holes.cpp  test_2_rect_star_holes.h
performance/cpp_app/src/util/: args.cpp  args.h  star_builder.cpp  star_builder.h  triangle_wrapper.h
performance/i_triangle_performance/: Cargo.toml  readme.txt
performance/i_triangle_performance/src/: main.rs
performance/i_triangle_performance/src/test/: mod.rs  test_0_star.rs  test_1_star_with_hole.rs  test_2_rect_star_holes.rs
performance/i_triangle_performance/src/util/: args.rs  star_builder.rs
performance/rust_app/: Cargo.toml  readme.txt
performance/rust_app/src/: main.rs
performance/rust_app/src/test/: experiment.rs  mod.rs  runner.rs  test.rs  test_0_star.rs  test_1_spiral.rs  test_1_star_with_hole.rs  test_2_rect_star_holes.rs  test_2_star_with_hole.rs  test_3_spiral.rs  test_3_star_with_8_holes.rs  test_4_spike.rs
performance/rust_app/src/util/: args.rs  mod.rs  star_builder.rs
src/: flip_shape.rs  index.rs  lib.rs  triangulate.rs
src/delaunay/: convex.rs  delaunay.rs  index_buffer.rs  mod.rs  triangle.rs  triangulate.rs  vertex.rs
src/monotone/: mlayout.rs  mnav_node.rs  mod.rs  monotone_layout.rs  mpoly.rs  mslice_buffer.rs  nlayout.rs  node_layout.rs
src/stroke/: builder.rs  butt.rs  mod.rs  style.rs
src/triangulation/: float.rs  int.rs  triangulate.rs
tests/: convex_tests.rs  data.rs  doc_tests.rs  monotone_test.rs  monotone_tests.rs  non_zero_tests.rs  triangulation.rs  triangulation_tests.rs
tests/data/: triangle_test_48.json  triangle_test_65.json  triangle_test_73.json
