[package]
name = "i_triangle"
version = "0.18.0"
edition = "2021"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
description = "Polygon Triangulation Library: Efficient Delaunay Triangulation for Complex Shapes."
license = "MIT"
repository = "https://github.com/iShape-Rust/iTriangle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
#i_float = { path = "../iFloat" }
#i_shape = { path = "../iShape" }
#i_overlay = { path = "../iOverlay" }

i_float = "^0.8"
i_shape = "^0.14.0"
i_overlay = "^0.23.0"

[dev-dependencies]
serde_json = "^1.0"