[package]
name = "i_triangle"
version = "0.22.1"
edition = "2021"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
description = "Polygon Triangulation Library: Efficient Delaunay Triangulation for Complex Shapes."
license = "MIT"
repository = "https://github.com/iShape-Rust/iTriangle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
#i_float = { path = "../iFloat" }
#i_shape = { path = "../iShape" }
#i_overlay = { path = "../iOverlay" }

i_float = "1.0.1"
i_shape = "1.0.1"
i_overlay = "1.0.2"

[dev-dependencies]
serde_json = "^1.0"