[package]
name = "editor"
version = "0.1.0"
edition = "2024"
publish = false


[dependencies]
iced = { version = "^0.13.1", features = ["wgpu", "advanced"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

wasm-bindgen = "~0.2.95"

log = "0.4.22"
console_log = "^1.0.0"
console_error_panic_hook = "^0"

i_mesh = { path = "../../iMesh/iMesh" }
i_triangle = "0.33.0"