[package]
name = "i_triangle"
version = "0.29.2"
edition = "2021"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
description = "Polygon Triangulation Library: Efficient Delaunay Triangulation for Complex Shapes."
license = "MIT"
repository = "https://github.com/iShape-Rust/iTriangle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
glam = ["i_overlay/glam"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
#i_overlay = { path = "../../iOverlay/iOverlay" }
#i_tree = { path = "../../iTree" }


i_tree = { version = "~0.14.0" }
i_overlay = "~3.2"

[dev-dependencies]
serde_json = "^1.0"
rand = "0.9.1"