[package]
name = "i_triangle"
version = "0.33.0"
edition = "2021"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
description = "Polygon Triangulation Library: Efficient Delaunay Triangulation for Complex Shapes."
license = "MIT"
repository = "https://github.com/iShape-Rust/iTriangle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
glam = ["i_overlay/glam"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
#i_overlay = { path = "../../iOverlay/iOverlay" }
#i_tree = { path = "../../iTree" }
i_key_sort = { path = "../../iKeySort" }

i_tree = "~0.15.0"
#i_key_sort = "~0.5.0"
i_overlay = "~3.4.0"


[dev-dependencies]
rand = "0.9.1"