[package]
name = "i_triangle"
version = "0.37.0"
edition = "2021"
authors = ["Nail Sharipov <nailxsharipov@gmail.com>"]
description = "Polygon Triangulation Library: Efficient Delaunay Triangulation for Complex Shapes."
license = "MIT"
repository = "https://github.com/iShape-Rust/iTriangle"

keywords = ["triangulation", "delaunay", "earcut", "monotone", "convex" ]

categories = ["algorithms", "graphics", "game-development", "science::geo", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
glam = ["i_overlay/glam"]
serde = ["dep:serde", "i_overlay/serde"]

[dependencies]
serde = { version = "^1.0", default-features = false, features = ["derive"], optional = true }

#i_overlay = { path = "../../iOverlay/iOverlay" }
#i_tree = { path = "../../iTree" }
#i_key_sort = { path = "../../iKeySort/iKeySort" }

i_overlay = "~4.0.3"
i_tree = "~0.16.0"
i_key_sort = "~0.7.0"



[dev-dependencies]
rand = { version = "~0.9", features = ["alloc"] }